--- a/foo/package.json
+++ b/foo/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.2.0",
     "fs-jetpack": "^5.1.0",
     "js-base64": "^3.7.3",
     "markdown-table": "^3.0.2",
