--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "fs-jetpack": "^5.1.0",
     "js-base64": "^3.7.3",
-    "markdown-table": "^3.0.2"
+    "markdown-table": "^3.0.2",
+    "prettier": "^2.8.0"
   }
 }
